# PointCloud-GeoLab

./: .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO_REVIEW.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
benchmarks/: benchmark_gicp.py  benchmark_icp.py  benchmark_kdtree.py  benchmark_ransac.py  benchmark_registration.py
configs/: batch_example.yaml  icp_config.yaml  ransac_config.yaml
cpp/: CMakeLists.txt  README.md  kdtree_demo.cpp
data/: README.md  bunny_source.ply  bunny_target.ply  lidar_scene.ply  object.ply  room.pcd  room.xyz  synthetic_scene.ply
docs/: GICP.md  Geometry.md  ICP.md  KDTree.md  RANSAC_Plane.md  ROADMAP.md  algorithms.md  api.md  api_stability.md  architecture.md  artifact_schema.md  audit_report_template.md  benchmark.md  benchmarking.md  case_study_bunny.md  case_study_kitti.md  case_study_registration.md  cli_reference.md  coverage.md  datasets.md  demo_walkthrough.md  interview_notes.md  kitti_case_study.md  limitations.md  portfolio_report_template.md  project_boundary.md  reconstruction.md  registration.md  release_checklist.md  reviewer_checklist.md  scale_benchmark.md  testing_strategy.md  versioning.md  web_api.md  web_console.md
examples/: benchmark_demo.py  demo_bounding_box.py  demo_icp.py  demo_kdtree.py  demo_preprocessing.py  demo_ransac_plane.py  gallery_demo.py  generate_demo_data.py  gicp_demo.py  global_registration_demo.py  icp_demo.py  kdtree_demo.py  kitti_lidar_segmentation.py  modelnet_primitive_demo.py  pointnet_demo.py  preprocess_lidar_demo.py  preprocessing_demo.py  primitive_fitting_demo.py  real_bunny_registration.py  segmentation_demo.py  visualization_demo.py  voxel_hash_grid_demo.py
outputs/: metrics.json  portfolio_check_report.md
pointcloud_geolab/: __init__.py  __main__.py  api.py  cli.py  pipeline.py
results/: aligned_source.ply  icp_benchmark.md  kdtree_benchmark.md  plane_inliers.ply  plane_outliers.ply  room_clean.ply
scripts/: audit_repository_state.py  check_artifact_schema.py  check_ci_status.py  check_dataset_fixtures.py  check_devcontainer.py  check_documented_commands.py  check_packaging.py  check_release_ready.py  check_repo_hygiene.py  check_v1_ready.py  prepare_datasets.py  run_scale_benchmark.py  verify_benchmarks.py  verify_portfolio.py  verify_realdata_workflow.py
tests/: test_algorithm_edge_cases.py  test_api.py  test_artifact_schema.py  test_ci_status.py  test_cli.py  test_cli_direct.py  test_dataset_fixtures.py  test_dataset_preparation.py  test_documented_commands.py  test_extract_primitives.py  test_feature_registration.py  test_features.py  test_geometry.py  test_gicp.py  test_global_registration.py  test_ground_segmentation.py  test_icp_variants.py  test_io_preprocessing.py  test_kdtree.py  (+30 more)
(+193 files in other folders)
