[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointcloud-geolab"
version = "0.1.0"
description = "Point cloud registration and 3D geometry processing system with custom KD-Tree, ICP, RANSAC, PCA, AABB/OBB and Open3D visualization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lazyJLBL" }]
dependencies = [
    "numpy>=1.24,<2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "black>=24.0", "ruff>=0.5"]
open3d = ["open3d>=0.18"]
vis = ["plotly>=5.20"]
io = ["laspy>=2.5"]
bench = ["scipy>=1.11", "scikit-learn>=1.4", "pandas>=2.0"]
ml = ["torch>=2.2"]
all = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "open3d>=0.18",
    "plotly>=5.20",
    "laspy>=2.5",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "torch>=2.2",
]

[project.scripts]
pointcloud-geolab = "pointcloud_geolab.cli:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["pointcloud_geolab*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402", "I001"]
"benchmarks/*.py" = ["E402", "I001", "E501"]
"scripts/*.py" = ["E402"]

[tool.coverage.run]
source = ["pointcloud_geolab"]
